--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "fast-memoize": "^2.5.2",
+    "formik": "^2.2.6",
     "i18n-js": "^3.8.0",
     "lodash": "^4.17.21",
     "lodash.memoize": "^4.1.2",
@@ -31,6 +32,7 @@
     "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
@@ -48,6 +50,7 @@
     "@types/lodash.memoize": "^4.1.6",
     "@types/react-native": "^0.64.0",
     "@types/react-native-restart": "^0.0.0",
+    "@types/react-native-star-rating": "^1.1.1",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.9.2",
